feat: Implement OpenCode server auto-start and management, and introduce SSE for bot-wrapper communication.

--- a/telegram_bot/.env.example
+++ b/telegram_bot/.env.example
@@ -19,6 +19,14 @@ TELEGRAM_CHAT_ID=0
 GROUP_CHAT_ID=-1001234567890
 
 # ===========================================
+# SECURITY: User Whitelist
+# ===========================================
+# Comma-separated list of user IDs who can use the bot
+# Get your user ID by sending /start to @userinfobot in a private chat
+# Example: ALLOWED_USER_IDS=123456789,987654321
+ALLOWED_USER_IDS=
+
+# ===========================================
 # OPTIONAL: Wrapper Server
 # ===========================================
 WRAPPER_URL=http://localhost:5147
