--- a/wrapper_server/.env.example
+++ b/wrapper_server/.env.example
@@ -13,6 +13,22 @@ TELEGRAM_CHAT_ID=0
 GROUP_CHAT_ID=-1001234567890
 
 # ===========================================
+# OPTIONAL: OpenCode Server Auto-Start
+# ===========================================
+# Set to true to automatically start OpenCode server when wrapper starts
+OPENCODE_LAUNCHER_ENABLED=false
+
+# Path to opencode binary (leave empty for auto-detect)
+OPENCODE_PATH=
+
+# OpenCode server host/port (if auto-starting)
+OPENCODE_LAUNCHER_HOST=127.0.0.1
+OPENCODE_LAUNCHER_PORT=4096
+
+# OpenCode server password (if set)
+OPENCODE_LAUNCHER_PASSWORD=
+
+# ===========================================
 # OPTIONAL: Wrapper Server
 # ===========================================
 WRAPPER_URL=http://localhost:5147
