--- a/wrapper_server/requirements.txt
+++ b/wrapper_server/requirements.txt
@@ -19,6 +19,9 @@ loguru>=0.7.0
 # File uploads
 python-multipart>=0.0.6
 
+# Process management (for opencode-manager.py)
+psutil>=5.9.0
+
 # Testing
 pytest>=7.0.0
 pytest-asyncio>=0.21.0
